# Barycentrics

./: CMakeLists.txt  README.md
Source/: Barycentrics.cpp  Barycentrics.h  BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  DemoUtils.cpp  DemoUtils.h
Source/Shaders/: Common.glsl  Model.frag  Model.vert  ModelBarycentrics.geom  ModelIndexed.frag  ModelIndexed.vert  ModelManual.frag  ModelManual.vert  ModelNativeAMD.frag  ModelNativeAMD.vert  ModelNativeAMDTextured.frag  ModelPassthrough.frag  ModelPassthrough.geom  ModelPassthrough.vert  ModelPassthroughTextured.frag  ModelPassthroughTextured.geom  ModelTextured.frag
